- tweaks to successfully compile and package for UE5EA

--- a/FMODStudio/FMODStudio.uplugin
+++ b/FMODStudio/FMODStudio.uplugin
@@ -3,7 +3,7 @@
 	
 	"FriendlyName" : "FMOD Studio Integration",
 	"Version" : 20109,
-	"VersionName" : "2.01.09",
+	"VersionName" : "2.01.09-UE5EA",
 	"CreatedBy" : "Firelight Technologies",
 	"CreatedByURL" : "http://fmod.com",
 	"Description" : "FMOD Studio Integration.",
